Add route for composition side & add Pie chart

--- a/src/app/composition/composition.component.html
+++ b/src/app/composition/composition.component.html
@@ -1,3 +1,9 @@
-<p>
-  composition works!
-</p>
+<div class="composition">
+  <div class="section1">
+
+    <div class="piechart1">
+        <div id="chartPieChart" class="chart"></div>
+    </div>
+    <div class="linechart1"></div>
+  </div>
+</div>
