--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <ul class="nav navbar-nav">
             <li style="border-top: 1px solid #4c7080;border-bottom: 1px solid #4c7080;padding-bottom: 43px;"><a style="color: aliceblue"><img src="../assets/rebo.png" class="icon" alt="">Robo-advisor</a></li>
             <li><a routerLink="/form" routerLinkActive="active"><img src="../assets/profil.png" class="icon1" alt="">Profil investisseur</a></li>
-            <li><a href="#" ><img src="../assets/composition.png" class="icon1" alt="">Composition</a></li>
+            <li><a routerLink="/composition" routerLinkActive="active" ><img src="../assets/composition.png" class="icon1" alt="">Composition</a></li>
             <li><a href="#"><img src="../assets/doc.png" class="icon1" alt="">Documentation</a></li>
             
         </ul>
