--- a/src/app/composition/composition.component.html
+++ b/src/app/composition/composition.component.html
@@ -4,6 +4,11 @@
     <div class="piechart1">
          <div id="chartPieChart" class="chart"></div>
     </div>
-    <div class="linechart1"></div>
+    <div class="barchart1">
+      <div id="chartBarChart" class="chart"></div>
+    </div>
+    <div class="linechart1">
+      <div id="chartLineChart" class="chart"></div>
+    </div>
   </div>
 </div>
