add graph bar & line

--- a/src/app/composition/composition.component.html
+++ b/src/app/composition/composition.component.html
@@ -2,11 +2,13 @@
   <div class="section1">
 
     <div class="piechart1">
-         <div id="chartPieChart" class="chart"></div>
+      <div id="chartPieChart" class="chart  "></div>
     </div>
     <div class="barchart1">
-      <div id="chartBarChart" class="chart"></div>
+      <div id="chartBarChart" class="chart "></div>
     </div>
+  </div>
+  <div class="section2">
     <div class="linechart1">
       <div id="chartLineChart" class="chart"></div>
     </div>
