--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -154,8 +154,8 @@
             </mat-step> -->
 
         </mat-vertical-stepper>
-        <button type="submit" class="btn btn-success" ><img src="../../assets/validation.png" alt="">Validation</button>
-        <!-- <button type="submit" class="btn btn-success" [disabled]="!reponseFrm.valid"><img src="../../assets/validation.png" alt="">Validation</button> -->
+        <!-- <button type="submit" class="btn btn-success" ><img src="../../assets/validation.png" alt="">Validation</button> -->
+        <button type="submit" class="btn btn-success" [disabled]="!reponseFrm.valid"><img src="../../assets/validation.png" alt="">Validation</button>
   </form>
 
 </div>
